# Cornell-CS3110

Ch04/Examples/: hello.ml
Ch04/Exercises/: average.ml  date.ml  divide.ml  fib.ml  more_fun.ml  rms.ml
Ch05/Examples/ounit/: sum.ml
Ch05/Exercises/: .ocamlformat  assoc_list.ml  cards.ml  concat.ml  date_before.ml  depth.ml  dune  earliest_date.ml  earliest_date_test.ml  is_bst.ml  library.ml  library_test.ml  list_expr.ml  list_max_exn.ml  list_max_exn_string.ml  list_max_exn_test.ml  patterns.ml  pokefun.ml  pokerecord.ml  powerset.ml  print_int_list.ml  product_test.ml  puzzle.ml  quadrant.ml  quadrant_poly.ml  safe_hd_and_tl.ml  shape.ml  student.ml  take_drop_tail.ml  tree.ml  unimodal.ml
Ch06/Exercises/: account_balance.ml  dune  exists.ml  library_uncurried.ml  list_keys.ml  matrix_add.ml  matrix_add_test.ml  matrix_multiply.ml  matrix_multiply_test.ml  more_list_fun.ml  product.ml  repeat.ml  row_vector_add.ml  row_vector_add_test.ml  sum_cube_odd.ml  valid_matrix.ml  valid_matrix_test.ml
Ch07/Examples/: abstract.ml  annotation.ml  encapsulation.ml  list.ml  ring.ml  structure.ml
Ch07/Exercises/: algebra.ml  bst_map.ml  case_insen_string.ml  char_map.ml  date.ml  encapsulation.ml  fraction.ml  is_for.ml  list_queue.ml  synonym.ml  to_string.ml
Ch08/Examples/: set.ml  square.mli
Ch09/Examples/: counter.ml  field.ml  list.ml  mutable_stack.ml
Ch09/Exercises/: gpa.ml  inc.ml  init_matrix.ml  norm.ml  refs.ml
Ch10/Examples/: memoization.ml  persistent_array.ml  red_black_tree.ml
Ch10/Exercises/: BstSet.ml  add_opt.ml  better_e.ml  case_insen_string.ml  different_seq_rep.ml  e.ml  efficient.ml  filter.ml  fmap_and_join.ml  fmap_and_join_again.ml  hash_usage.ml  hash_value.ml  interleave.ml  lazy_and.ml  lazy_hello.ml  lazy_seq.ml  linear_probing.ml  list_monad.ml  nth.ml  pow2.ml  primes.ml  promise.ml  sequences.ml  sift.ml  trivial.ml
(+32 files in other folders)
